--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!-- character set -->
         <meta charset="utf-8">
         <!-- web title -->
-        <title>crappy homepage</title>
+        <title>TRIA.os' Unofficial Mapmaking Documentation</title>
 
         <!-- Load external CSS styles -->
         <link rel="stylesheet" href="styles.css">
