--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <!-- web content -->
         <p> This is TRIA.os' Mapmaking Documentation repository, forked from the <a href="https://github.com/Tria-Studio/Tria-OS-Docs">original</a> by TRIA staffs.</p>
         <p> Currently being worked on myself to update this documentation alongside the updates of the main game, and (hopefully), simplified enough for people that have just started making things on ROBLOX and TRIA.os . </p>
-        <a href="/MapLib.md"> MapLib methods </a><br>
-        <a href="/FeatureLib.md"> List of all features that can be called by the MapLib </a><br>
-        <a href="/MapKitDocumentation.txt"> Documentation about the Map Kit </a><br>
-        <a href="/MapKitInstructions.txt"> Instructions of the Map Kit </a><br>
-        <a href="/EffectScript.md"> About the EffectScript </a><br>
-        <a href="/SeamlessSpectate.md"> A tutorial on how to make seamless spectating </a>
+        <a href="tria-docs-for-dummies/MapLib.md"> MapLib methods </a><br>
+        <a href="tria-docs-for-dummies/FeatureLib.md"> List of all features that can be called by the MapLib </a><br>
+        <a href="tria-docs-for-dummies/MapKitDocumentation.txt"> Documentation about the Map Kit </a><br>
+        <a href="tria-docs-for-dummies/MapKitInstructions.txt"> Instructions of the Map Kit </a><br>
+        <a href="tria-docs-for-dummies/EffectScript.md"> About the EffectScript </a><br>
+        <a href="tria-docs-for-dummies/SeamlessSpectate.md"> A tutorial on how to make seamless spectating </a>
     </body>
 </html>
