--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <!-- web content -->
         <audio controls autoplay><source src="/TRIA Assets/TRIA.os Lobby OST 2.ogg" type="audio/ogg"> TRIA.os Lobby Music </audio>
-        <p> This is TRIA.os' Mapmaking Documentation repository, forked from the <a href="https://github.com/Tria-Studio/Tria-OS-Docs">original</a> by TRIA staffs.</p>
+        <p> This is coderheck's TRIA.os Mapmaking Documentation repository, forked from the <a href="https://github.com/Tria-Studio/Tria-OS-Docs">original</a> by TRIA staffs.</p>
         <p> Currently being worked on myself to update this documentation alongside the updates of the main game, and (hopefully), simplified enough for people that have just started making things on ROBLOX and TRIA.os . </p>
         <a href="https://github.com/coderheck/tria-docs-for-dummies/blob/main/MapLib.md"> MapLib methods </a><br>
         <a href="https://github.com/coderheck/tria-docs-for-dummies/blob/main/FeatureLib.md"> List of all features that can be called by the MapLib </a><br>
